--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.user-search-widget {
+    width: 600px;
+    text-align: left;
+    margin: 0 auto;
+}
